extras/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  gatewayClassName: istio
  listeners:
    - protocol: http
      port: 80
      name: http-gateway
      allowedRoutes:
        namespaces:
          from: All
      # supportedKinds:
      # - group: gateway.networking.k8s.io
      #   kind: HTTPRoute
---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: http-app-1
# spec:
#   parentRefs:
#   - name: cilium-gateway
#     namespace: bookinfo
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /details
#     backendRefs:
#     - name: details
#       port: 9080
#   - matches:
#     - headers:
#       - type: Exact
#         name: magic
#         value: foo
#       queryParams:
#       - type: Exact
#         name: great
#         value: example
#       path:
#         type: PathPrefix
#         value: /
#       method: GET
#     backendRefs:
#     - name: productpage
#       port: 9080
