extras/gateway/general-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: general-gateway
  namespace: gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: ReferenceGrant
# metadata:
#   name: allow-gateway-to-monitoring
#   namespace: monitoring  # Namespace of the backend service
# spec:
#   from:
#   - group: gateway.networking.k8s.io
#     kind: HTTPRoute
#     namespace: gateway  # Namespace of the HTTPRoute
#   to:
#   - group: ""
#     kind: Service  # Allow referencing Kubernetes Services
